implemented generational GC's grey pages.
--HG--
extra : convert_revision : 9d86a1498837ac47475e03c082ae69f7394f4778

--- a/Makefile.in
+++ b/Makefile.in
@@ -19,7 +19,7 @@ BDW_LIB = $(BDW_DIR)/libgc.la
 
 SIGSEGV_DIR = sigsegv
 
-SUBDIRS = src $(ONIG_DIR) $(BDW_DIR) $(SIGSEGV_DIR)
+SUBDIRS = $(ONIG_DIR) $(BDW_DIR) $(SIGSEGV_DIR) src
 
 LDFLAGS = -pg
 
