--- a/tests/generational/Makefile.in
+++ b/tests/generational/Makefile.in
@@ -209,6 +209,7 @@ top_srcdir = @top_srcdir@
 YOG_DIR = ../..
 SRC_DIR = $(YOG_DIR)/src
 GC_DIR = $(SRC_DIR)/gc
+SIGSEGV_DIR = $(YOG_DIR)/sigsegv
 test_generational_SOURCES = $(GC_DIR)/generational.c $(GC_DIR)/copying.c \
 			    $(GC_DIR)/mark-sweep-compact.c $(SRC_DIR)/value.c \
 			    $(SRC_DIR)/error.c $(SRC_DIR)/object.c \
@@ -225,10 +226,10 @@ test_generational_SOURCES = $(GC_DIR)/generational.c $(GC_DIR)/copying.c \
 			    $(SRC_DIR)/builtins.c $(SRC_DIR)/eval.c \
 			    $(SRC_DIR)/float.c
 
-test_generational_CFLAGS = -Wall -I$(YOG_DIR)/include -DTEST_GENERATIONAL \
-			   -DGC_GENERATIONAL
+test_generational_CFLAGS = -Wall -I$(YOG_DIR)/include -I$(SIGSEGV_DIR)/src \
+			   -DTEST_GENERATIONAL -DGC_GENERATIONAL
 
-test_generational_LDFLAGS = -lcunit -lonig
+test_generational_LDFLAGS = -lcunit -lonig $(SIGSEGV_DIR)/src/.libs/libsigsegv.a
 all: all-am
 
 .SUFFIXES:
