--- a/Makefile.in
+++ b/Makefile.in
@@ -13,11 +13,13 @@ clean:
 	@for subdir in $(DIRS); do \
 		(cd $${subdir}; $(MAKE) clean); \
 	done
+	find tests -name "*.pyc" -print0 | xargs --null rm -f
 
 distclean: 
 	@for subdir in $(DIRS); do \
 		(cd $${subdir}; $(MAKE) distclean); \
 	done
+	find tests -name "*.pyc" -print0 | xargs --null rm -f
 	rm -f $(CONFIG_DISTCLEAN_FILES)
 	rm -f Makefile
 
@@ -25,6 +27,7 @@ maintainer-clean:
 	@for subdir in $(DIRS); do \
 		(cd $${subdir}; $(MAKE) maintainer-clean); \
 	done
+	find tests -name "*.pyc" -print0 | xargs --null rm -f
 	rm -f $(CONFIG_DISTCLEAN_FILES)
 	rm -rf autom4te.cache
 	rm -f Makefile
