--- a/Makefile.in
+++ b/Makefile.in
@@ -14,12 +14,14 @@ clean:
 		(cd $${subdir}; $(MAKE) clean); \
 	done
 	find tests -name "*.pyc" -print0 | xargs --null rm -f
+	rm -f core*
 
 distclean: 
 	@for subdir in $(DIRS); do \
 		(cd $${subdir}; $(MAKE) distclean); \
 	done
 	find tests -name "*.pyc" -print0 | xargs --null rm -f
+	rm -f core*
 	rm -f $(CONFIG_DISTCLEAN_FILES)
 	rm -f Makefile
 
@@ -28,6 +30,7 @@ maintainer-clean:
 		(cd $${subdir}; $(MAKE) maintainer-clean); \
 	done
 	find tests -name "*.pyc" -print0 | xargs --null rm -f
+	rm -f core*
 	rm -f $(CONFIG_DISTCLEAN_FILES)
 	rm -rf autom4te.cache
 	rm -f Makefile
