Implemented importing .so file. refs 36.
--HG--
extra : convert_revision : 1fc2cc040baca5f650378cc864a779465778a69b

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -43,7 +43,7 @@ COMMON_SOURCES = arg.c \
 	value.c \
 	vm.c
 CFLAGS_COMMON = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include -Wall
-LDFLAGS_COMMON = $(ONIG_DIR)/.libs/libonig.a
+LDFLAGS_COMMON = $(ONIG_DIR)/.libs/libonig.a -ldl
 
 EXTRA_PROGRAMS = yog-bdw yog-copying yog-mark-sweep yog-mark-swee-compact \
 		 yog-mark-sweep-compact yog-generational
