Added -export-dynamic linker option to call initializer of .so package. closes 36.
--HG--
extra : convert_revision : 3635bd7f042290536af4044bc037ce96b9da0bad

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -386,7 +386,7 @@ COMMON_SOURCES = arg.c \
 	vm.c
 
 CFLAGS_COMMON = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include -Wall
-LDFLAGS_COMMON = $(ONIG_DIR)/.libs/libonig.a -ldl
+LDFLAGS_COMMON = $(ONIG_DIR)/.libs/libonig.a -ldl -export-dynamic
 bin_PROGRAMS = @BIN_PROGRAMS@
 yog_copying_SOURCES = $(COMMON_SOURCES) gc/copying.c
 yog_copying_CFLAGS = $(CFLAGS_COMMON) -DGC_COPYING
