Changed to generate dependency file. fixes 45.
--HG--
extra : convert_revision : ddb8ed7b56b831b5877986550af94d690473ee2b

--- a/ext/Makefile.in
+++ b/ext/Makefile.in
@@ -9,15 +9,18 @@ include ./$(DEPDIR)/concurrent.Po
 all: concurrent$(SO_EXT)
 
 concurrent$(SO_EXT): concurrent.c
-	$(CC) -I../include -shared -O2 -Wall -lpthread -o $@ $<
+	$(CC) -I../include -shared -O2 -Wall -lpthread -MT concurrent$(SO_EXT) -MD -MP -MF $(DEPDIR)/concurrent.Tpo -o $@ $<
+	mv -f $(DEPDIR)/concurrent.Tpo $(DEPDIR)/concurrent.Po
 
 clean: 
 	rm -f *$(SO_EXT)
 
 distclean: 
+	rm -rf ./$(DEPDIR)
 	rm -f *$(SO_EXT)
 	rm -f Makefile
 
 maintainer-clean: 
+	rm -rf ./$(DEPDIR)
 	rm -f *$(SO_EXT)
 	rm -f Makefile
