added -Wall option to tests' package. closes 62.
--HG--
extra : convert_revision : ccc9c89125b36f967c04055eeee3252a4447037f

--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -1,6 +1,6 @@
 
 LIBS = test_package4.so test_package5.so
-LIBS_OPT = -shared -O2 -I../include
+LIBS_OPT = -shared -O2 -I../include -Wall
 
 test_package4.so: test_package4.c
 	$(CC) -o $@ $(LIBS_OPT) $<
