added mercurial's revision and changeset string to version output. closes 53.
--HG--
extra : convert_revision : a21f0706b4630d443669af064f75a64f79b40cc2

--- a/Makefile.in
+++ b/Makefile.in
@@ -43,3 +43,6 @@ test test-copying test-mark-sweep test-mark-sweep-compact test-bdw test-generati
 
 am--refresh:
 	@:
+
+update-version:
+	cd src && $(MAKE) $@
