--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -414,6 +414,9 @@ INST_PY = $(ROOT_DIR)/tools/inst.py
 INST_CMD = make insts
 GEN_AM_CMD = python $(ROOT_DIR)/tools/update_automake.py .
 TEST_CMD = py.test
+VERSION_H = $(ROOT_DIR)/include/yog/version.h
+VERSION_H_M4 = $(VERSION_H).m4
+VERSION_H_NEW = $(VERSION_H).new
 all: $(BUILT_SOURCES)
 	$(MAKE) $(AM_MAKEFLAGS) all-am
 
@@ -3322,6 +3325,19 @@ compile.inc: compile.inc.tmpl $(INSTS_DEF) $(INST_PY)
 
 $(ROOT_DIR)/include/yog/inst.h: $(ROOT_DIR)/include/yog/inst.h.tmpl $(INSTS_DEF) $(INST_PY)
 	$(INST_CMD)
+
+update-version:
+	if [ -d "$(ROOT_DIR)/.hg" ]; then \
+		m4 -DREVISION="`hg parent --template='{rev} {node|short}'`" $(VERSION_H_M4) > $(VERSION_H_NEW); \
+		if [ -f $(VERSION_H) ]; then \
+			cmp $(VERSION_H) $(VERSION_H_NEW); \
+			if [ $$? != 0 ]; then \
+				mv -f $(VERSION_H_NEW) $(VERSION_H); \
+			fi \
+		else \
+			mv -f $(VERSION_H_NEW) $(VERSION_H); \
+		fi \
+	fi
 
 Makefile.am: Makefile.am.tmpl
 	$(GEN_AM_CMD)
